Rolling back changes that are now in other PRs